--- a/local/data/ui/views/overview.xml
+++ b/local/data/ui/views/overview.xml
@@ -39,10 +39,38 @@
       </single>
     </panel>
     <panel>
-      <title>Open P1s or P2s</title>
+      <title>Open service requests</title>
       <single>
         <search>
-          <query>sourcetype="ivanti:ism:incident" Priority&lt;=2 | eventstats latest(_time) as lt | where _time=lt | stats count</query>
+          <query>sourcetype="ivanti:ism:servicereq" | eventstats latest(_time) as lt | where _time=lt | stats count</query>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="colorBy">value</option>
+        <option name="colorMode">block</option>
+        <option name="drilldown">none</option>
+        <option name="numberPrecision">0</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="rangeValues">[0,30,70,100]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="showSparkline">0</option>
+        <option name="showTrendIndicator">1</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <option name="trendColorInterpretation">standard</option>
+        <option name="trendDisplayMode">absolute</option>
+        <option name="unitPosition">after</option>
+        <option name="useColors">1</option>
+        <option name="useThousandSeparators">1</option>
+      </single>
+    </panel>
+    <panel>
+      <title>Open P1s</title>
+      <single>
+        <search>
+          <query>sourcetype="ivanti:ism:incident" Priority=1 | eventstats latest(_time) as lt | where _time=lt | stats count</query>
           <earliest>$timePicker1.earliest$</earliest>
           <latest>$timePicker1.latest$</latest>
           <sampleRatio>1</sampleRatio>
@@ -66,6 +94,62 @@
         <option name="useThousandSeparators">1</option>
       </single>
     </panel>
+    <panel>
+      <title>Open P2s</title>
+      <single>
+        <search>
+          <query>sourcetype="ivanti:ism:incident" Priority=2 | eventstats latest(_time) as lt | where _time=lt | stats count</query>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="colorBy">value</option>
+        <option name="colorMode">block</option>
+        <option name="drilldown">none</option>
+        <option name="numberPrecision">0</option>
+        <option name="rangeColors">["0x53a051","0xf8be34","0xdc4e41"]</option>
+        <option name="rangeValues">[0,5]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="showSparkline">1</option>
+        <option name="showTrendIndicator">1</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <option name="trendColorInterpretation">standard</option>
+        <option name="trendDisplayMode">absolute</option>
+        <option name="unitPosition">after</option>
+        <option name="useColors">1</option>
+        <option name="useThousandSeparators">1</option>
+      </single>
+    </panel>
+        <panel>
+      <title>VIP service requests (open)</title>
+      <single>
+        <search>
+          <query>sourcetype="ivanti:ism:servicereq" IsVIP="true" | eventstats latest(_time) as lt | where _time=lt | stats count</query>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="colorBy">value</option>
+        <option name="colorMode">block</option>
+        <option name="drilldown">none</option>
+        <option name="numberPrecision">0</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
+        <option name="rangeValues">[0,30,70,100]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="showSparkline">0</option>
+        <option name="showTrendIndicator">1</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <option name="trendColorInterpretation">standard</option>
+        <option name="trendDisplayMode">absolute</option>
+        <option name="unitPosition">after</option>
+        <option name="useColors">1</option>
+        <option name="useThousandSeparators">1</option>
+      </single>
+    </panel>
   </row>
   <row>
     <panel>
@@ -76,8 +160,8 @@
 | eventstats latest(_time) as lt 
 | where _time=lt 
 | top limit=20 ActualCategory</query>
-          <earliest>-24h@h</earliest>
-          <latest>now</latest>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
           <sampleRatio>1</sampleRatio>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
@@ -122,8 +206,8 @@
 | eventstats latest(_time) as lt 
 | where _time=lt 
 | top ProfileFullName</query>
-          <earliest>-24h@h</earliest>
-          <latest>now</latest>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
           <sampleRatio>1</sampleRatio>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
@@ -168,8 +252,8 @@
         <search>
           <query>sourcetype="ivanti:ism:incident" | eventstats latest(_time) as lt | where _time=lt
 | table IncidentNumber, Priority, LastModDateTime, Status, ProfileFullName Subject, TypeOfIncident, Urgency, extracted_Source, Service, Symptom, Owner, OwnerTeam, Impact, Email, ActualCategory, CustomerDepartment, CostPerMinute, CostPerMinute_Currency</query>
-          <earliest>-24h@h</earliest>
-          <latest>now</latest>
+          <earliest>$timePicker1.earliest$</earliest>
+          <latest>$timePicker1.latest$</latest>
           <sampleRatio>1</sampleRatio>
         </search>
         <option name="count">5</option>
