--- a/local/data/ui/views/service_requests.xml
+++ b/local/data/ui/views/service_requests.xml
@@ -11,25 +11,16 @@
   </fieldset>
   <row>
     <panel>
-      <event>
+      <table>
         <search>
-          <query>sourcetype="ivanti:ism:servicereq" | eventstats latest(_time) as lt | where _time=lt</query>
+          <query>sourcetype="ivanti:ism:servicereq" | eventstats latest(_time) as lt | where _time=lt | table _time, Status, extracted_Source, CreatedBy, Owner, Price, Price_Currency, ProfileFullName, Service, Symptom | sort -_time | rename extracted_Source as Source</query>
           <earliest>$timePicker1.earliest$</earliest>
           <latest>$timePicker1.latest$</latest>
           <sampleRatio>1</sampleRatio>
         </search>
-        <option name="count">20</option>
-        <option name="list.drilldown">none</option>
-        <option name="list.wrap">1</option>
-        <option name="maxLines">5</option>
-        <option name="raw.drilldown">full</option>
+        <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
-        <option name="rowNumbers">0</option>
-        <option name="table.drilldown">all</option>
-        <option name="table.sortDirection">asc</option>
-        <option name="table.wrap">1</option>
-        <option name="type">list</option>
-      </event>
+      </table>
     </panel>
   </row>
 </form>
