--- a/default/data/ui/views/overview.xml
+++ b/default/data/ui/views/overview.xml
@@ -1,4 +1,4 @@
-<form theme="light">
+<form theme="light" version="1.1">
   <label>Ivanti Service Manager - Overview</label>
   <fieldset submitButton="false">
     <input type="time" token="timePicker1">
