--- a/default/data/ui/views/service_requests.xml
+++ b/default/data/ui/views/service_requests.xml
@@ -1,4 +1,4 @@
-<form>
+<form  version="1.1">
   <label>Service Requests</label>
   <fieldset submitButton="false">
     <input type="time" token="timePicker1">
